--- a/petclinic/data-access.properties
+++ b/petclinic/data-access.properties
@@ -22,3 +22,6 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Property that determines which database to use with an AbstractJpaVendorAdapter
 jpa.database=MYSQL
+
+# Show SQL in logs
+jpa.showSql=true
