Preparing to start the whole ELK + app stack

--- a/mysql/collectd.conf
+++ b/mysql/collectd.conf
@@ -94,10 +94,10 @@ LoadPlugin network
 #	ValuesPercentage false
 #</Plugin>
 
-#<Plugin interface>
-#	Interface "eth0"
-#	IgnoreSelected false
-#</Plugin>
+<Plugin interface>
+	Interface "eth0"
+	IgnoreSelected false
+</Plugin>
 
 #<Plugin java>
 #	JVMArg "-verbose:jni"
@@ -130,9 +130,7 @@ LoadPlugin network
 </Plugin>
 
 <Plugin network>
-#	# client setup:
-	Server "ff18::efc0:4a42" "25826"
-	<Server "239.192.74.66" "25826">
+	<Server "logstash" "25826">
 #		SecurityLevel Encrypt
 #		Username "user"
 #		Password "secret"
