Use hostnames when sending collectd stats

--- a/mysql/collectd.conf
+++ b/mysql/collectd.conf
@@ -10,8 +10,7 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
-Hostname    "localhost"
-FQDNLookup   true
+Hostname    "Database"
 Interval     5
 
 ##############################################################################
