--- a/petclinic/collectd.conf
+++ b/petclinic/collectd.conf
@@ -10,8 +10,7 @@
 # Global settings for the daemon.                                            #
 ##############################################################################
 
-Hostname    "localhost"
-FQDNLookup   true
+Hostname    "PetClinic"
 Interval     5
 
 ##############################################################################
