--- a/mysql/collectd.conf
+++ b/mysql/collectd.conf
@@ -121,7 +121,7 @@ LoadPlugin network
 	<Database petclinic>
 		Host "localhost"
 		User "root"
-		Password "root"
+		Password ""
 		Database "petclinic"
 		ConnectTimeout 10
 		InnodbStats true
