Removed the DF plugin from collectd stats (too much useless info)

--- a/mysql/collectd.conf
+++ b/mysql/collectd.conf
@@ -51,7 +51,7 @@ LoadPlugin syslog
 ##############################################################################
 
 LoadPlugin cpu
-LoadPlugin df
+# LoadPlugin df
 LoadPlugin interface
 #LoadPlugin java
 LoadPlugin load
