--- a/petclinic/collectd.conf
+++ b/petclinic/collectd.conf
@@ -51,7 +51,7 @@ LoadPlugin syslog
 ##############################################################################
 
 LoadPlugin cpu
-LoadPlugin df
+# LoadPlugin df
 LoadPlugin interface
 #LoadPlugin java
 LoadPlugin load
